--- a/programmer-humour/index.html
+++ b/programmer-humour/index.html
@@ -1,1 +1,12 @@
-<img id="funnyImage" src="" alt="a funny image">
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+    <script src="humour.js"></script>
+    <img id="funnyImage" src="" alt="a funny image">
+   
+</head>
+<body></body>
+</html>
+
+
